--- a/tracker/src/Components/CSS/Contact.css
+++ b/tracker/src/Components/CSS/Contact.css
@@ -8,7 +8,7 @@
   }
   .contact-section h1{
     text-align: center;
-    color: #ddd;
+    color: rgb(255, 255, 255);
   }
   .border{
     width: 100px;
@@ -27,19 +27,19 @@
   .contact-form-text{
     display: block;
     width: 100%;
-    box-sizing: border-box;
+    border-radius: 20px;
     margin: 16px 0;
     border: 0;
     /* background: #111; */
     /* background-color: #34495e; */
-    background-color: brown;
+    background-color: rgb(255, 206, 114);
     padding: 20px 40px;
     outline: none;
     color: #fff;
     transition: 0.5s;
   }
   .contact-form-text:focus{
-    box-shadow: 0 0 10px 4px #34495e;
+    box-shadow: 0 0 10px 4px #4a4949;
   }
   textarea.contact-form-text{
     resize: none;
